example of remove role that works

--- a/log-insight/log-insight_example.html
+++ b/log-insight/log-insight_example.html
@@ -11,4 +11,5 @@
 <tr valign=top bgcolor='#cb4b16;'><td>2013-07-29 16:31:14</td><td>d08-00-27-71-46-c5</td><td>two</td><td>19</td><td></td><td></td></tr>
 <tr valign=top bgcolor='#dc322f;'><td>2013-07-29 16:31:14</td><td>d08-00-27-bd-f5-d2</td><td>three</td><td>19</td><td></td><td></td></tr>
 <tr valign=top bgcolor='#d33682;'><td>2013-07-30 12:31:21</td><td>d08-00-27-64-49-8f</td><td>four</td><td>25</td><td>glance::setup<br>glance::cache<br>glance::scrubber<br>glance::registry<br>glance::monitor<br>glance::api</td><td></td></tr>
+<tr valign=top bgcolor='#d33682;'><td>2013-07-30 12:50:30</td><td>d08-00-27-64-49-8f</td><td>four</td><td>19</td><td></td><td>glance::setup<br>glance::cache<br>glance::scrubber<br>glance::registry<br>glance::monitor<br>glance::api</td></tr>
 </table>
