--- a/log-insight/log-insight_example.html
+++ b/log-insight/log-insight_example.html
@@ -1,4 +1,6 @@
-<table border=1><th>Date/Time</th><th>Node</th><th>Alias</th><th>#</th><th>Added</th><th>Removed</th></tr>
+<html>
+  <body>
+</html></table><table border=1><th>Date/Time</th><th>Node</th><th>Alias</th><th>#</th><th>Added</th><th>Removed</th></tr>
 <tr valign=top bgcolor='#b58900;'><td>2013-07-18 15:02:55</td><td>d08-00-27-4a-5c-08</td><td>one</td><td>17</td><td>barclamp<br>repos<br>crowbar-hacks<br>ohai<br>kernel-panic<br>bmc-nat::client<br>network<br>network::fast_nics_tune<br>resolver<br>logging::client<br>ntp<br>database::server<br>ganglia::client<br>nagios::client<br>nagios::monitor_hw_client<br>provisioner::base<br>utils</td><td></td></tr>
 <tr valign=top bgcolor='#b58900;'><td>2013-07-18 15:04:22</td><td>d08-00-27-4a-5c-08</td><td>one</td><td>19</td><td>keystone::monitor<br>keystone::server</td><td></td></tr>
 <tr valign=top bgcolor='#b58900;'><td>2013-07-18 15:05:44</td><td>d08-00-27-4a-5c-08</td><td>one</td><td>21</td><td>rabbitmq::rabbit<br>rabbitmq::monitor</td><td></td></tr>
@@ -12,4 +14,6 @@
 <tr valign=top bgcolor='#dc322f;'><td>2013-07-29 16:31:14</td><td>d08-00-27-bd-f5-d2</td><td>three</td><td>19</td><td></td><td></td></tr>
 <tr valign=top bgcolor='#d33682;'><td>2013-07-30 12:31:21</td><td>d08-00-27-64-49-8f</td><td>four</td><td>25</td><td>glance::setup<br>glance::cache<br>glance::scrubber<br>glance::registry<br>glance::monitor<br>glance::api</td><td></td></tr>
 <tr valign=top bgcolor='#d33682;'><td>2013-07-30 12:50:30</td><td>d08-00-27-64-49-8f</td><td>four</td><td>19</td><td></td><td>glance::setup<br>glance::cache<br>glance::scrubber<br>glance::registry<br>glance::monitor<br>glance::api</td></tr>
+</body>
+  
 </table>
