--- a/log-insight/log-insight_example.html
+++ b/log-insight/log-insight_example.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-</html></table><table border=1><th>Date/Time</th><th>Node</th><th>Alias</th><th>#</th><th>Added</th><th>Removed</th></tr>
+<table border=1><th>Date/Time</th><th>Node</th><th>Alias</th><th>#</th><th>Added</th><th>Removed</th></tr>
 <tr valign=top bgcolor='#b58900;'><td>2013-07-18 15:02:55</td><td>d08-00-27-4a-5c-08</td><td>one</td><td>17</td><td>barclamp<br>repos<br>crowbar-hacks<br>ohai<br>kernel-panic<br>bmc-nat::client<br>network<br>network::fast_nics_tune<br>resolver<br>logging::client<br>ntp<br>database::server<br>ganglia::client<br>nagios::client<br>nagios::monitor_hw_client<br>provisioner::base<br>utils</td><td></td></tr>
 <tr valign=top bgcolor='#b58900;'><td>2013-07-18 15:04:22</td><td>d08-00-27-4a-5c-08</td><td>one</td><td>19</td><td>keystone::monitor<br>keystone::server</td><td></td></tr>
 <tr valign=top bgcolor='#b58900;'><td>2013-07-18 15:05:44</td><td>d08-00-27-4a-5c-08</td><td>one</td><td>21</td><td>rabbitmq::rabbit<br>rabbitmq::monitor</td><td></td></tr>
@@ -17,3 +17,4 @@
 </body>
   
 </table>
+</html>
